# rust_course_hw

./: .deadlines.yml  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
docs/: reading-list.md
problems/basics/fibonacci/: README.md
problems/basics/fibonacci/src/: lib.rs
problems/basics/palindrome/: README.md
problems/basics/palindrome/src/: lib.rs
problems/basics/palindrome/tests/: tests.rs
problems/basics/prime_numbers/: README.md
problems/basics/prime_numbers/src/: lib.rs
problems/cargo/cargo/: README.md
problems/cargo/cargo/src/: config.rs  lib.rs  trait.rs
problems/cargo/cargo/tests/: tests.rs
problems/iterators/add2/: Cargo.toml  README.md
problems/iterators/add2/src/: lib.rs
problems/iterators/add2/tests/: tests.rs
problems/iterators/div3/: Cargo.toml  README.md
problems/iterators/div3/src/: lib.rs
problems/iterators/flatten2/: README.md
problems/iterators/split/: README.md
problems/iterators/take_n/: Cargo.toml  README.md
problems/memory/flatten/: README.md
problems/memory/kolhoz_hashmap/: README.md
problems/net/chat/: Cargo.toml  README.md
problems/net/roshambo/: Cargo.toml  README.md
problems/projects/vcs/: Cargo.toml
problems/structs/minmax_queue/: README.md
problems/structs/trust/: README.md
problems/threads/sequential/: README.md
problems/threads/threadpool/: README.md
seminars/group-1/: Cargo.toml
seminars/group-2/: Cargo.toml
templates/vcs/: Cargo.toml
templates/vcs/src/: main.rs
tools/: Cargo.toml
tools/rover/: Cargo.toml
tools/rover/src/: main.rs
tools/vcs_tester/: tester.py
(+57 files in other folders)
