[workspace]
members = [
    # Problems
    "problems/tutorial/add",
    "problems/basics/fibonacci",
    "problems/basics/palindrome",
    "problems/basics/prime_numbers",
    "problems/memory/add_references",
    "problems/memory/where_k_th_ordinal_element_greater",
    "problems/memory/flatten",
    "problems/memory/kolhoz_hashmap",

    # Tools
    "tools/rover",

    # Additional
    "",
]
