[workspace]
members = [
    # Problems
    "problems/tutorial/add",
    "problems/basics/fibonacci",
    "problems/basics/palindrome",
    "problems/basics/prime_numbers",
    "problems/memory/add_references",
    "problems/memory/where_k_th_ordinal_element_greater",
    "problems/memory/flatten",
    "problems/memory/kolhoz_hashmap",
    "problems/structs/lru_cache",
    "problems/structs/trust",
    "problems/structs/minmax_queue",
    "problems/cargo/cargo",
    "problems/iterators/div3",
    "problems/iterators/add2",
    "problems/iterators/take_n",

    # Tools
    "tools/rover",

    # Additional
    "",
]
